<resources>
    <!-- Name App-->
    <string name="app_name">Meus Pilas</string>
    <!-- Login-->
    <string name="type_email">Digite seu E-mail!</string>
    <string name="action_settings">Configurações</string>
    <string name="type_password">Digite sua Senha!</string>
    <string name="button_login">Acessar sua Conta</string>
    <string name="button_create_account">Criar uma nova Conta</string>
    <string name="messageUserPlusFail">Conteúdo da conta não liberada pela google!</string>
    <string name="userNotFound">Usuário não encontrado!</string>
    <string name="passwordIncorrect">Senha Incorreta!</string>
    <!-- Create Account-->
    <string name="title_activity_new_account">Criar Conta</string>
    <string name="createAccountName">Nome de usuário</string>
    <string name="createAccountEmail">E-mail</string>
    <string name="createAccountPassword">Senha</string>
    <string name="btNewAccount">Criar sua conta</string>
    <string name="btCancel">Cancelar</string>
    <!-- Home-->
    <string name="title_activity_main">Visão Geral</string>
    <string name="labelBalance">Saldo Atual:</string>
    <string name="labelMonetary">R$</string>
    <string name="labelText">0,00</string>
    <string name="titleSummary">Resumo Mensal</string>
    <string name="income">Receitas: R$</string>
    <string name="outcome">Gastos: R$</string>
    <string name="valueIncome">0,00</string>
    <string name="valueOutcome">0,00</string>
    <string name="titleGraphics">Gráficos</string>
    <string name="title_activity_entry_main">Cadastros</string>
    <string name="newEntry">Novo registro</string>
    <!-- Entry-->
    <string name="btIncome">Receitas</string>
    <string name="btOutcome">Despesas</string>
    <string name="btTransfer">Transferências</string>
    <!-- Income-->
    <string name="salary">Salário</string>
    <string name="loan">Empréstimo</string>
    <string name="gift">Presente</string>
    <string name="other">Outros</string>
    <string-array name="spIncome">
        <item>@string/salary</item>
        <item>@string/loan</item>
    <!--    <item>@string/gift</item>
        <item>@string/other</item> -->
    </string-array>
    <!-- Outcome-->
    <string name="fixedAccount">Contas Fixas</string>
    <string name="variableAccounts">Contas Variáveis</string>
    <string-array name="spOutcome">
        <item>@string/fixedAccount</item>
        <item>@string/variableAccounts</item>
    </string-array>
    <!-- Transfer-->
    <string name="otherAccount">Conta de Terceiros</string>
    <string name="otherPerson">Outra Conta Pessoal</string>
    <string-array name="spTransfer">
        <item>@string/otherAccount</item>
        <item>@string/otherPerson</item>
    </string-array>
    <!-- LL Salary-->
    <string name="labelSalary">Salário: R$</string>
    <string name="typeSalary">Salário</string>
    <string name="labelDateSalary">Dia do Pagamento:</string>
    <string name="typeDateSalary">Dia</string>
    <string name="btSalary">Salvar</string>
    <string name="incompleteSalary">Os campos estão imcompletos, favor preencher todos os campos!</string>
    <!-- LL Loans-->
    <string name="labelLoan">Empréstimo: R$</string>
    <string name="typeLoan">Empréstimo</string>
    <string name="labelAmountOfInstallments">Quantidade de Mensalidades:</string>
    <string name="typeAmountOfInstallments">Mensalidades</string>
    <string name="labelInterestRates">Juros: (%)</string>
    <string name="typeInterestRates">Juros</string>
    <string name="labelDateLoan">Dia do pagamento:</string>
    <string name="typeDateLoan">Dia</string>
    <string name="labelTimeToPayment">Tempo para primeira parcela (dias)?</string>
    <string name="typeTimeToPayment"></string>
    <string name="labelBeneficiaryName">Beneficiário:</string>
    <string name="typeBeneficiaryName">Beneficiário</string>
    <string name="labelTypeBeneficiary">Selecione o Tipo de Beneficiário:</string>
    <string name="individuals">Pessoa Física</string>
    <string name="legalEntity">Pessoa Jurídica</string>
    <string name="btLoan">Salvar Empréstimo!</string>
    <string name="incompleteLoan">Favor preencher o valor e o dia para pagamento! (Os demais campos são opcionais)</string>
    <!-- LL Fixed Account-->
    <string name="etValueFixedAccount">Valor da conta</string>
    <string name="etDayPaymentFixedAccount">Dia do pagamento</string>
    <string name="etTypeFixedAccount">Descrição (Tipo)</string>
    <string name="btFixedAccount">Salvar</string>
    <!-- LL Variable Account-->
    <string name="etValueVariableAccount">Valor conta</string>
    <string name="etDayPaymentVariableAccount">Dia do pagamento</string>
    <string name="etTypeVariableAccount">Descrição (Tipo)</string>
    <string name="etAmountOfInstallmentsVariableAccount">Quantidade de prestações</string>
    <string name="btVariableAccount">Salvar</string>
    <string name="title_activity_balance">BalanceActivity</string>
    <string name="title_activity_incomes">IncomesActivity</string>
    <string name="title_activity_outcomes">OutcomesActivity</string>
</resources>
