<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llFixedAccount">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etValueFixedAccount"
        android:inputType="numberDecimal"
        android:id="@+id/etValueFixedAccount"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etDayPaymentFixedAccount"
        android:inputType="number"
        android:id="@+id/etDayPaymentFixedAccount"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etTypeFixedAccount"
        android:id="@+id/etTypeFixedAccount"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btFixedAccount"
        android:id="@+id/btFixedAccount"/>
</LinearLayout>