<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="josealencar.com.br.meuspilas.EntryMainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/btIncome"
            android:text="@string/btIncome"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/btOutcome"
            android:text="@string/btOutcome"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/btTransfer"
            android:text="@string/btTransfer"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/income_activity" />

        <include layout="@layout/outcome_activity" />

        <include layout="@layout/transfer_activity" />
    </LinearLayout>
</LinearLayout>
